src/objects/SecurityAssignmentConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountSplitTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Split Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssistantAssignmentTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assistant Assignment Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepAssignmentTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rep Assignment Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepSecurityTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rep Security Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepSplitTriggerEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rep Split Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Security Assignment Configuration</label>
</CustomObject>